        Implementing the window protection.
#27 <Changed pic IDs for the commpression of the picture>
    "Drivers/camera/Camera.py" Line 71
        HQ pictures now get compressed with IDs 100 - 255. They are still saved the same way.
        Example: picture 0, LQ ID is 0, HQ ID is 100

#28 <Created windowProtection in fileProtection>
    "protectionProticol/fileProtection.py" Line 115
        This deletes everything in txWindows.txt that is not a valid transmission window

#29 <Eddited Window Protection so that valid windows were not deleted>
    "protectionProticol/fileProtection.py" line 197
    isnumeric does not accept anything that is not digit 0-9. Negatives are not accepted

#30 <Added a function in packetProcessing.py that deletes picture files>
    "TXISR/packetProcessing.py" line 378
    This function should delete all picture directories and their subsequent subdirs.
    The other functions for the data and enabling beacons have not been added yet

#31 <Added more commands to packetProcessing.py>   
    "TXISR/packetProcessing.py" lines 233 - 265
    These functions read the correct bits to execute commands on the flat sat. Not all of the functions that are called have been completed.

#32 <Added a function in packetProcessing.py that deletes data files>
    "TXISR/packetProcessing.py" line 391
    This function should delete all data files from flightLogicData.
    The other functions for the data and enabling beacons have not been added yet   

#33 <Fixed cammera driver>
    "Drivers/camera/Camera.py" lines 24,26,36,52
    I added try except statements to the code so if the camera driver is not present the code can still run normally
    Test:
        1: I ran flight logic normally, I first sent a command for a picture, it successfuly took a picture. Then I had it run though boom deploy it successfuly 
            ran. 
        2: I unplug the cammera from the pi and ran the 1st test again. It ran though successfuly however no pictures were tacken. 