@@ -50,38 +50,37 @@ class Transmitting:
         then dequeues a transfer window once within 20 seconds of that timestamp
         """
         while True:
-            while True:
-                print(">>> Monitoring windows <<<")
-                #if close enough, prep files
-                #wait until 5 seconds before, return True
-                if((self.__timeToNextTXwindowVar > 10) and (self.__timeToNextTXwindowVar<20) and (not self.__inProgress)): #If next window is in 20 seconds or less
-                    #get the data 
-                    print(">>> Getting data from the queue <<<")
-                    #turn on tx in progress flag
-                    self.__inProgress = True
-                    #read in data and then split it
-                    line = self.__queue.dequeue(True)
-                    self.__sendData = line.split(',')
-                    #If sendData has the right number of members
-                    if self.__sendData.__len__() == 5:
-                        print(self.__sendData)
-                        #Assign the variables appropriately
-                        self.__duration = int(self.__sendData[1])
-                        self.__datatype = int(self.__sendData[2])
-                        self.__pictureNumber = int(self.__sendData[3])
-                        self.__index = int(self.__sendData[4])
-                        if self.__datatype < 3:#Attitude, TTNC, or Deployment data respectively
-                            print(">>> Preparing data 0 - 2 <<<")
-                            self.__inProgress = prepareFiles.prepareData(self.__duration, self.__datatype, self.__index)
-                        else:
-                            print(">>> Preparing data 3 - 4 <<<")
-                            print("Transimtting.py:", self.__duration, self.__datatype, self.__pictureNumber)
-                            self.__inProgress = prepareFiles.preparePicture(self.__duration, self.__datatype, self.__pictureNumber, self.__index, self.__camObj)
+            print(">>> Monitoring windows <<<")
+            #if close enough, prep files
+            #wait until 5 seconds before, return True
+            if((self.__timeToNextTXwindowVar > 10) and (self.__timeToNextTXwindowVar<20) and (not self.__inProgress)): #If next window is in 20 seconds or less
+                #get the data 
+                print(">>> Getting data from the queue <<<")
+                #turn on tx in progress flag
+                self.__inProgress = True
+                #read in data and then split it
+                line = self.__queue.dequeue(True)
+                self.__sendData = line.split(',')
+                #If sendData has the right number of members
+                if self.__sendData.__len__() == 5:
+                    print(self.__sendData)
+                    #Assign the variables appropriately
+                    self.__duration = int(self.__sendData[1])
+                    self.__datatype = int(self.__sendData[2])
+                    self.__pictureNumber = int(self.__sendData[3])
+                    self.__index = int(self.__sendData[4])
+                    if self.__datatype < 3:#Attitude, TTNC, or Deployment data respectively
+                        print(">>> Preparing data 0 - 2 <<<")
+                        self.__inProgress = prepareFiles.prepareData(self.__duration, self.__datatype, self.__index)
                     else:
-                        self.__inProgress = False
-                        print(self.__sendData)
-                        print("sendData is incorrect.")
-                await asyncio.sleep(5)
+                        print(">>> Preparing data 3 - 4 <<<")
+                        print("Transimtting.py:", self.__duration, self.__datatype, self.__pictureNumber)
+                        self.__inProgress = prepareFiles.preparePicture(self.__duration, self.__datatype, self.__pictureNumber, self.__index, self.__camObj)
+                else:
+                    self.__inProgress = False
+                    print(self.__sendData)
+                    print("sendData is incorrect.")
+            await asyncio.sleep(5)
 
     #this func will get call right before the tx window is ready, it calls the c code when everything is ready
     async def getReadyForWindows (self):
